--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,42 @@
+server:
+  port: 80
+
 spring:
-  h2:
-    console:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/bisbill?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: 1513
+    #    url: jdbc:h2:mem:isbill
+    #    username: sa
+    #    password:
+    #    driver-class-name: org.h2.Driver
+  hibernate:
+    dialect: org.hibernate.dialect.MySQLDialect
+    charSet: utf-8
+
+  devtools:
+    restart:
       enabled: true
-      path: /h2-console
+    livereload:
+      enabled: true
+
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
   jpa:
     defer-datasource-initialization: true
+#    hibernate:
+#      ddl-auto: update
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 
-  datasource:
-    url: jdbc:h2:mem:isbill
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
+
+
+
