--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/bisbill?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     username: root
-    password: 1513
+    password: Qordlstn0417#
     #    url: jdbc:h2:mem:isbill
     #    username: sa
     #    password:
@@ -39,4 +39,23 @@ spring:
     prefix: classpath:/templates/
 
 
+#test 위한 DB
+  config:
+    activate:
+      on-profile: test
+    h2:
+      console:
+        enabled: true
+        path: /h2-console
+    jpa:
+      database: h2
+      generate-ddl: off
+    datasource:
+      driver-class-name: org.h2.Driver
+      url: jdbc:h2:mem:islog
+      username: SA
+      password:
+      initialization-mode: always
+      schema: classpath:schema-h2.sql
+      data: classpath:data-h2.sql
 
