~ 페이징 및 검색 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,29 +33,12 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+#      실행되는 쿼리 콘솔 출력
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
-
-
-#test 위한 DB
-  config:
-    activate:
-      on-profile: test
-    h2:
-      console:
-        enabled: true
-        path: /h2-console
-    jpa:
-      database: h2
-      generate-ddl: off
-    datasource:
-      driver-class-name: org.h2.Driver
-      url: jdbc:h2:mem:islog
-      username: SA
-      password:
-      initialization-mode: always
-      schema: classpath:schema-h2.sql
-      data: classpath:data-h2.sql
-
