--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,13 @@ spring:
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
+
+cloud:
+  aws:
+    s3:
+      bucket: spring-bucket-bis
+    stack.auto: false
+    region.static: ap-northeast-2
+    credentials:
+      accessKey: AKIAWEAMPDQHPEFNKQS2
+      secretKey: 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
