--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '1.8'
+    sourceCompatibility = '11'
 }
 
 configurations {
@@ -30,8 +30,13 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    //swagger 아래의 경우는 Springboot 3.x 버전에서 사용
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
 //    부트 스트랩
-    implementation 'org.webjars:bootstrap:4.5.3'
+    implementation 'org.webjars:bootstrap:5.1.3'
 //    타임리프 dialect
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.3.0'
 //    스프링 시큐리티
